Bloco de notas finalizado e arquivos revisados

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="menu">
             <a href="calculadora.html"><li>Calculadora</li></a>
-            <li>To-Do List</li>
+            <a href="blocoDeNotas.html"><li>Bloco de Notas</li></a>
             <a href="conversorMoedas.html"><li>Conversor de moedas</li></a>
         </ul>
     </div>
